# codex-history

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: history.rs  main.rs  render.rs  search.rs  tui.rs
