[package]
name = "codex-history"
version = "0.1.0"
edition = "2024"
description = "Fuzzy-search Codex conversation history from the terminal."
readme = "README.md"
license = "MIT"
keywords = ["codex", "cli", "history", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
home = "0.5"
pulldown-cmark = "0.13"
ratatui = "0.30"
serde_json = "1.0"
unicode-width = "0.2"
walkdir = "2.5"
